--- a/src/index.css
+++ b/src/index.css
@@ -261,3 +261,7 @@
 .grid-auto-fit {
   @apply grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3;
 }
+
+.scrollThin{
+  scrollbar-width: thin;
+}
